--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div class="container">
+	<h1>Zombie blocker game thing</h1>
+	<div class="score-container">
+		<h2 class="score"></h2>
+		<h2 class="high-score"></h2>
+	</div>
+	</div>
 	<script src="./src/index.ts"></script>	
 </body>
 </html>
