--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>RxJS game</title>
+	<title>Boxes and Eggs</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="container">
-	<h1>Zombie blocker game thing</h1>
+	<h1>Boxes and Eggs</h1>
 	<div class="score-container">
 		<h2 class="score"></h2>
 		<h2 class="high-score"></h2>
