GitHub link on page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<h2 class="high-score"></h2>
 	</div>
 	</div>
+	<p>Gameplay described on <a href="https://github.com/carltheperson/boxes-and-eggs">GitHub</a></p>
 	<script src="./src/index.ts"></script>	
 </body>
 </html>
