--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<h2 class="score"></h2>
 		<h2 class="high-score"></h2>
 	</div>
+	<div class="board-container"></div>
 	</div>
 	<p>Gameplay described on <a href="https://github.com/carltheperson/boxes-and-eggs">GitHub</a></p>
 	<script src="./src/index.ts"></script>	
